<resources>
    <string name="app_name" translatable="false">MunichTours</string>
    <string name="title_favourite">Favourites</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="app_about">About</string>
    <string name="app_bar_settings">Settings</string>
    <string name="app_bar_search">Search</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>
    <string name="profile_knowbetter">We would love to get you to know. \n Login now!</string>
    <string name="app_version" translatable="false">Version 1.5 BETA</string>
    <string name="app_version_header" translatable="false">Version</string>
    <string name="app_dev_name" translatable="false">Exotic Apps</string>
    <string name="dev_by">Developed by</string>
    <string name="enable_beta_acces">Enable acces to beta-features</string>
    <string name="app_string_start" translatable="false">Start</string>
    <string name="customize_start_tabs">Customize Dashboard site</string>
    <string name="choose_customize_start_tabs">Choose which Cards to show on the dashboard:</string>
    <string name="pref_warning_beta_acces_title">Do you really want to enable beta features?</string>
    <string name="pref_warning_beta_acces_message">BETA-features may be buggy, won\'t work or in worst case make this app behave weird/crash.</string>
    <string name="pref_recommended_state_off">Recommended state:off</string>
    <string name="pref_recommended_state_on">Recommended state:on</string>
    <string name="pref_language">Language</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_general_summary">Language</string>
    <string name="pref_header_info" translatable="false">Info</string>
    <string name="pref_header_info_summary">App-Version, Developer, BETA-Features</string>
    <string name="dashboard_header">Munich - City with heart</string>
    <string name="card_title_famous_places">The big sights</string>
    <string name="card_subtitle_famous_places">Discover places to shop and meet the city life in munich</string>
    <string name="card_title_discover_quarters">The 25 quarters of munich</string>
    <string name="card_subtitle_discover_quarters">Each of munichs 25 quarters has must-visit-places</string>
    <string name="card_title_historical_places">Historical Places</string>
    <string name="card_subtitle_historical_places">Munich has a stunning history. Learn about it step-by-step by visiting these sights</string>
    <string name="card_title_myplaces">My starred places</string>
    <string name="card_subtitle_myplaces">Saved to your collection</string>
    <string name="places_marienplatz_descr_short">The Marienplatz is a beautiful place for shopping, experiencing the bavarian culture and more.</string>
    <string-array name="places">
        <item>Marienplatz</item>
        <item>Karlsplatz</item>
    </string-array>
</resources>
